test/compile-errors/spec-decl-recursion.crow
main nat64^(_ string[])
	()

a spec b

b spec a
